Implement SonarLint fixes.