@@ -1,12 +1,12 @@
 package de.berlinerschachverband.bmm.poc.seasons.service;
 
 import de.berlinerschachverband.bmm.basedata.data.Season;
+import de.berlinerschachverband.bmm.exceptions.BmmException;
 import de.berlinerschachverband.bmm.poc.seasons.data.SeasonData;
 import de.berlinerschachverband.bmm.basedata.data.SeasonRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PocSeasonsService {
@@ -18,11 +18,14 @@ public class PocSeasonsService {
     }
 
     public List<SeasonData> getAllSeasons() {
-        return seasonRepository.findAll().stream().map(this::toSeasonData).collect(Collectors.toList());
+        return seasonRepository.findAll().stream().map(this::toSeasonData).toList();
     }
 
     public SeasonData getSeason(String name) {
-        return new SeasonData(seasonRepository.findByName(name).get().getName());
+        return new SeasonData(seasonRepository.findByName(name)
+                .orElseThrow(
+                        ()->new BmmException("season with name " + name + " does not exist."))
+                .getName());
     }
 
     public void createSeason(String name) {
@@ -32,7 +35,6 @@ public class PocSeasonsService {
     }
 
     private SeasonData toSeasonData(Season season) {
-        SeasonData seasonData = new SeasonData(season.getName());
-        return seasonData;
+        return new SeasonData(season.getName());
     }
 }
